<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_item"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dp_170"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_5"
    android:background="@drawable/item_product_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clImg"
        android:layout_width="@dimen/dp_154"
        android:layout_height="@dimen/dp_160"
        android:layout_margin="@dimen/dp_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/item_img_product">
        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtNameProduct"
        android:layout_width="@dimen/dp_154"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:padding="@dimen/dp_5"
        android:text="@string/name_product"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clImg" />

    <TextView
        android:id="@+id/txtd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d"
        android:textColor="@color/colorBlack40"
        android:textSize="@dimen/sp_10"
        android:layout_margin="@dimen/dp_5"
        app:layout_constraintEnd_toStartOf="@+id/txtDonGiaChuaGiam"
        app:layout_constraintTop_toBottomOf="@+id/txtNameProduct" />


    <TextView
        android:id="@+id/txtDonGiaChuaGiam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_underline"
        android:textColor="@color/colorBlack40"
        android:textSize="@dimen/sp_12"
        android:layout_margin="@dimen/dp_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNameProduct" />

    <TextView
        android:id="@+id/txtd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/sp_12"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtDonGia"
        app:layout_constraintTop_toBottomOf="@+id/txtd" />

    <TextView
        android:id="@+id/txtDonGia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/sp_14"
        android:layout_margin="@dimen/dp_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDonGiaChuaGiam" />


</androidx.constraintlayout.widget.ConstraintLayout>