<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_SetAccount"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    tools:context=".Fragment.SetAccountFragment"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:src="@drawable/ic_backspace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_password"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_30"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctlChangeAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgAvatarChange"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:src="@drawable/demo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:background="@drawable/bg_change_img"
            android:padding="@dimen/dp_5"
            android:src="@drawable/ic_create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtEmailChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/id_email"
        android:textColor="@color/black"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctlChangeAvatar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailChange">

        <EditText
            android:id="@+id/edChangeUserName"
            android:layout_width="@dimen/dp_290"
            android:layout_height="@dimen/dp_60"
            android:layout_margin="@dimen/dp_10"
            android:background="@drawable/edt_background"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="@dimen/dp_5"
            android:padding="@dimen/dp_10"
            android:hint="@string/user_name"
            android:textColor="@color/colorEditText"
            android:textSize="@dimen/sp_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edChangeAddress"
            android:layout_width="@dimen/dp_290"
            android:layout_height="@dimen/dp_60"
            android:layout_margin="@dimen/dp_10"
            android:background="@drawable/edt_background"
            android:drawableStart="@drawable/ic_place"
            android:drawablePadding="@dimen/dp_5"
            android:padding="@dimen/dp_10"
            android:hint="@string/address"
            android:textColor="@color/colorEditText"
            android:textSize="@dimen/sp_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edChangeUserName" />

        <EditText
            android:id="@+id/edChangeNumber"
            android:layout_width="@dimen/dp_290"
            android:layout_height="@dimen/dp_60"
            android:layout_margin="@dimen/dp_10"
            android:background="@drawable/edt_background"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="@dimen/dp_5"
            android:padding="@dimen/dp_10"
            android:hint="@string/txt_numble"
            android:textColor="@color/colorEditText"
            android:textSize="@dimen/sp_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edChangeAddress" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

        <Button
            android:id="@+id/btnChangeAcc"
            android:layout_width="@dimen/dp_290"
            android:layout_height="@dimen/dp_60"
            android:background="@drawable/btn_background"
            android:text="@string/txt_change"
            android:textSize="@dimen/sp_25"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>