<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DetailActivity"
    android:id="@+id/detailConstraintLayout">

    <ImageView
        android:id="@+id/imgDetail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_300"
        android:src="@drawable/btn_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_430"
        android:background="@drawable/detail_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDetail">

        <TextView
            android:id="@+id/txtDetailName"
            android:layout_width="@dimen/dp_300"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:padding="@dimen/dp_5"
            android:text="@string/name_product"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtDetailPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:padding="@dimen/dp_5"
            android:text="@string/prince"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDetailName" />

        <TextView
            android:id="@+id/txtd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:padding="@dimen/dp_5"
            android:text="@string/d"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toEndOf="@+id/txtDetailPrice"
            app:layout_constraintTop_toBottomOf="@+id/txtDetailName" />

        <ScrollView
            android:id="@+id/ScrollView01"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_230"
            android:layout_margin="@dimen/dp_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDetailPrice">

            <TextView
                android:id="@+id/txtDescribeDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:text="@string/describe"
                android:textSize="@dimen/dp_20"/>

        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_100"
            android:background="@drawable/detail_bg_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="@dimen/dp_130"
                android:layout_height="@dimen/dp_50"
                android:layout_margin="@dimen/dp_20"
                android:background="@drawable/detail_up_down"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRemove"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:background="@drawable/ic_remove"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textSize="@dimen/dp_20"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnAdd"
                    app:layout_constraintStart_toEndOf="@+id/btnRemove"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnAdd"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginRight="@dimen/dp_15"
                    android:background="@drawable/ic_add"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAddToCard"
                android:layout_width="@dimen/dp_150"
                android:layout_height="@dimen/dp_55"
                android:layout_marginEnd="@dimen/dp_20"
                android:background="@drawable/btn_background"
                android:text="@string/add_to_card"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_15"
                android:padding="@dimen/dp_5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>